test/sema/typeck/class/index-set-wrong-type.dora
class Foo { a: Float64, b: Float64 }
impl std::traits::IndexSet for Foo {
    type Index = Int;
    type Item = Float64;
    fn set(index: Self::Index, value: Self::Item) {
        if index == 0 {
            self.a = value;
        } else {
            assert(index == 1);
            self.b = value;
        }
    }
}
fn f(x: Foo, value: Float64) {
    x(0.0) = value;
}

====================
error: Argument expects value of type `Int64` but got `Float64`.
--> index-set-wrong-type.dora:15:7
 | }
 | fn f(x: Foo, value: Float64) {
 |     x(0.0) = value;
         ~~~
 | }
 | 
1 error found.
